1st Patch for java 9 migration